--- a/style_connections.css
+++ b/style_connections.css
@@ -98,3 +98,105 @@ height: auto;
 display: block;
 }
 }
+
+header {
+top: 0;
+font-family: "Roboto", sans-serif;
+z-index: 1000;
+width: 100%;
+align-items: center;
+padding: 15px 6%;
+background-color: purple;
+color: white;
+}
+
+.logo {
+font-size: 20px;
+font-weight: 600;
+color: white;
+}
+
+/* Dropdown button styling */
+.dropdown {
+display: inline-block;
+margin-right: 20px;
+}
+
+.dropbtn {
+background-color: purple;
+color: white;
+padding: 16px;
+font-size: 16px;
+border: none;
+}
+
+.dropdown-content {
+display: none;
+position: absolute;
+background-color: #f9f9f9;
+font-family: "Roboto", sans-serif;
+min-width: 180px;
+box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.dropdown-content a {
+color: black;
+padding: 12px 16px;
+text-decoration: none;
+display: block;
+}
+
+.dropdown-content a:hover {
+background-color: #f1f1f1;
+}
+
+.dropdown:hover .dropdown-content {
+display: block;
+}
+
+.dropdown:hover .dropbtn {
+background-color: none;
+}
+
+.bx.bx-menu {
+color: white;
+font-size: 24px;
+cursor: pointer;
+margin-left: 20px; /* Add margin for spacing */
+}
+
+footer {
+    display: flex;
+    height: 100px;
+    background-color: purple;
+    color: white;
+    line-height: 1.6;
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+    padding-left: 97px;
+    padding-top: 6%;
+    }
+
+    footer h2 {
+    font-size: 40px;
+    }
+
+    footer p {
+    margin-top: 30px;
+    width: 60%;
+    }
+
+    .fa-brands {
+    padding-top: 20px;
+    padding-right: 30px;
+    }
+
+    .socialmidia a {
+    text-decoration: none;
+    color: white;
+    }
+
+    .socialmidia a:hover {
+    color: black;
+    }
