--- a/style_connections.css
+++ b/style_connections.css
@@ -1,5 +1,14 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+    font-family: Beiruti, sans-serif;
+   }
+
 .connections-page{
-width: 75%;
+width: 79%;
 color: white;
 font-size: 20px;
 font-weight: 600;
@@ -22,6 +31,7 @@ width: 79%;
 font-size: 2em;
 font-weight: bold;
 font-family: 'Beirut', sans-serif;
+margin-bottom: 32px;
 }
 
 .text-content p {
@@ -100,69 +110,76 @@ display: block;
 }
 
 header {
-top: 0;
-font-family: "Roboto", sans-serif;
-z-index: 1000;
-width: 100%;
-align-items: center;
-padding: 15px 6%;
-background-color: purple;
-color: white;
-}
-
-.logo {
-font-size: 20px;
-font-weight: 600;
-color: white;
-}
-
+    right: 0;
+    top:0;
+    z-index: 1000;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 15px 9%;
+    background: transparent;
+    background-color: purple;
+   }
+   .logo {
+    font-size: 40px;
+    font-weight: 600;
+    color: white;
+   }
+   .navlist {
+    display: flex;
+   }
+   .navlist a{
+    color: white;
+    margin-left: 60px;
+    font-size: 20px;
+    font-weight: 600;
+    border-bottom: 2px solid transparent;
+    transition: all .55s ease;
+   }
+   .navlist a:hover {
+    border-bottom: 2px solid white
+   }
 /* Dropdown button styling */
 .dropdown {
-display: inline-block;
-margin-right: 20px;
+    display: inline-block;
+    margin-right: 20px;
 }
-
 .dropbtn {
-background-color: purple;
-color: white;
-padding: 16px;
-font-size: 16px;
-border: none;
+    background-color: purple;
+    color: white;
+    padding: 16px;
+    font-size: 30px;
+    border: none;
 }
-
 .dropdown-content {
-display: none;
-position: absolute;
-background-color: #f9f9f9;
-font-family: "Roboto", sans-serif;
-min-width: 180px;
-box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    display: none;
+    position: absolute;
+    background-color: #F9F9F9;
+    font-family: “Roboto”, sans-serif;
+    min-width: 180px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
-
 .dropdown-content a {
-color: black;
-padding: 12px 16px;
-text-decoration: none;
-display: block;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
 }
-
 .dropdown-content a:hover {
-background-color: #f1f1f1;
+    background-color: #F1F1F1;
 }
-
 .dropdown:hover .dropdown-content {
-display: block;
+    display: block;
 }
-
 .dropdown:hover .dropbtn {
-background-color: none;
+    background-color: none;
 }
-
 .bx.bx-menu {
-color: white;
-font-size: 24px;
-cursor: pointer;
-margin-left: 20px; /* Add margin for spacing */
+    color: white;
+    font-size: 24px;
+    cursor: pointer;
+    margin-left: 20px;
 }
 
 footer {
